Get scrappy optimisation going

--- a/semimech/09apply-to-data-again.ipynb
+++ b/semimech/09apply-to-data-again.ipynb
@@ -230,6 +230,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3927be6f-4704-42ef-8603-c47f38ca6813",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def interpret_params(params):\n",
+    "    gen_mean_str = f'generation time mean: {params[0]}'\n",
+    "    gen_sd_str = f'generation time sd: {params[1]}'\n",
+    "    process_str = 'random process vals: ' + ', '.join([str(i) for i in params[2:]])\n",
+    "    return f'{gen_mean_str} \\n{gen_sd_str} \\n{process_str}'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37b03eee-59fb-471b-bf02-b1accc49afaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Manual calibration\n",
+    "model_result, process_vals = model_func(10.0, 2.0, [0.7, 0.7, 0.7, 0.5, 0.5], 33e6, 120.0, len(mys_data), gen_times_end)\n",
+    "manual, suscept, r_t = model_result\n",
+    "plot_output_fit(mys_data, model_result, process_vals, n_times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "209cb833-ab7d-41b5-ac33-da70c5eb56d0",
    "metadata": {},
    "outputs": [],
@@ -237,7 +264,20 @@
     "raw_data = pd.read_csv('https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv', index_col=0)['MYS']\n",
     "raw_data.index = pd.to_datetime(raw_data.index)\n",
     "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()['MYS'].to_dict()\n",
-    "n_times = len(mys_data)"
+    "n_times = len(mys_data)\n",
+    "\n",
+    "# Scale up notifications to incidence outside of model\n",
+    "mys_data = {k: v * 16 for k, v in mys_data.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d03bbfa9-3ab2-4475-9f23-ff2a7e986ffd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_bounds = [[8.0, 12.0], [1.5, 2.5]] + [[0.4, 1.0]] * 7"
    ]
   },
   {
@@ -247,9 +287,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=mys_data: calib_func(x, p, s, t, d), param_bounds)\n",
-    "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], 33e6, infectious_seed, len(mys_data), gen_times_end)\n",
+    "global_result = shgo(lambda x, p=33e6, s=120.0, t=n_times, d=mys_data: calib_func(x, p, s, t, d), param_bounds)\n",
+    "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], 33e6, 120.0, len(mys_data), gen_times_end)\n",
     "optimised, suscept, r_t = model_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c54394d5-e7ab-4539-b6b6-167ced9a3ad5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(interpret_params(global_result.x))"
    ]
   },
   {
