Add comments and explanation for basic notebook

--- a/semimech/01basics.ipynb
+++ b/semimech/01basics.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "source": [
     "## Semi-mechanistic modelling exploration\n",
+    "\n",
+    "### Rationale\n",
     "Thinking about this equation in Faria, et al:\n",
     "$\\\\i_{s,t} = (1-\\frac{n_{s,t}}{N})R_{s,t}\\sum_{\\tau<t} i_{s,\\tau}g_{t-\\tau}$\n",
     "\n",
@@ -44,10 +46,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "057a8d10-fc2f-4851-855d-19a0f72c8013",
+   "metadata": {},
+   "source": [
+    "### Parameters\n",
+    "Choose some arbitrary model parameters to get started."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_times = 20\n",
+    "seed = 1.0\n",
+    "r0 = 2.0\n",
+    "incidence = np.zeros(n_times)\n",
+    "incidence[0] = seed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e3136042-a7b8-4887-9a3e-9f87525f4e22",
    "metadata": {},
    "source": [
-    "Get some sort of distribution we can sensibly use for the generation time"
+    "## Generation time\n",
+    "Get a distribution we can sensibly use for the generation time,\n",
+    "which could represent an acute immunising respiratory infection."
    ]
   },
   {
@@ -61,46 +88,18 @@
     "    var = req_sd ** 2.0\n",
     "    scale = var / req_mean\n",
     "    a = req_mean / scale\n",
-    "    return {'a': a, 'scale': scale}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Model parameters\n",
-    "times = 20\n",
-    "incidence = np.zeros(times)\n",
-    "seed = 1.0\n",
-    "incidence[0] = seed\n",
-    "r0 = 2.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c11d36e-d841-44d8-a42d-3b59ae16487f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return {'a': a, 'scale': scale}\n",
+    "\n",
     "# Generation time parameters\n",
     "req_sd = 1.5\n",
     "req_mean = 5.0\n",
     "gamma_params = get_gamma_params_from_mean_sd(req_mean, req_sd)\n",
-    "gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "820f801d-d03f-49b2-9730-42a19e2241a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.Series(gen_time_densities, index=range(times)).plot()"
+    "\n",
+    "# Get the increment in the CDF\n",
+    "# (i.e. the integral over the increment by one in the distribution)\n",
+    "gen_time_densities = np.diff(gamma.cdf(range(n_times + 1), **gamma_params))\n",
+    "\n",
+    "pd.Series(gen_time_densities, index=range(n_times)).plot()"
    ]
   },
   {
@@ -108,7 +107,8 @@
    "id": "3bf8f7a5-d9a4-4724-9d67-bcc079f9a7c3",
    "metadata": {},
    "source": [
-    "Looping in Python, with pre-calculated generation times"
+    "### Check calculations make sense from first principles\n",
+    "Looping in Python to be completely explicit (with pre-calculated generation times)."
    ]
   },
   {
@@ -118,21 +118,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for t in range(1, times):\n",
+    "for t in range(1, n_times):\n",
     "    val = 0\n",
     "    for tau in range(t):  # For each day preceding the day of interest\n",
-    "        delay = t - tau  # The time period from each preceding day to the day of interest\n",
-    "        val += incidence[tau] * gen_time_densities[delay] * r0  # Increment the value for the day of interest\n",
-    "    incidence[t] = val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b01fd33a-faa5-485a-a2d1-db71b762cfc0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        delay = t - tau - 1  # The generation time index for each preceding day to the day of interest\n",
+    "        val += incidence[tau] * gen_time_densities[delay] * r0  # Calculate the incidence value\n",
+    "    incidence[t] = val\n",
     "incidence"
    ]
   },
@@ -141,7 +132,8 @@
    "id": "79049f42-ea25-4774-b241-c50b36606aa7",
    "metadata": {},
    "source": [
-    "Get rid of one loop to get lists/arrays for the incidence and generation time distribution"
+    "Get rid of one loop to get lists/arrays for the incidence and generation time distribution \n",
+    "(and check that calculations are the same)."
    ]
   },
   {
@@ -151,19 +143,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for t in range(1, times):\n",
-    "    delays = [t - tau for tau in range(t)]\n",
+    "for t in range(1, n_times):\n",
+    "    delays = [t - tau - 1 for tau in range(t)]\n",
     "    gammas = gen_time_densities[delays]\n",
-    "    incidence[t] = (incidence[:t] * gammas).sum() * r0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f3cddb9-7587-47a6-96d4-b4c35f065c74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    incidence[t] = (incidence[:t] * gammas).sum() * r0\n",
     "incidence"
    ]
   },
@@ -172,7 +155,7 @@
    "id": "d417c5c5-b6c5-4e68-9552-87a76fe24af7",
    "metadata": {},
    "source": [
-    "This is going to just keep going up exponentially, of course, because $R_{0} > 1$ and there is no susceptible depletion"
+    "We can get this down to a one-liner if preferred. This is going to just keep going up exponentially, of course, because $R_{0} > 1$ and there is no susceptible depletion."
    ]
   },
   {
@@ -182,27 +165,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for t in range(1, times):\n",
-    "    incidence[t] = (incidence[:t] * gen_time_densities[t:0:-1]).sum() * r0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55ba0682-39d5-4e2e-a43d-744400e2c4de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "incidence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c3bef00-e66b-4322-943c-093d17223be6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "for t in range(1, n_times):\n",
+    "    incidence[t] = (incidence[:t] * gen_time_densities[:t][::-1]).sum() * r0\n",
+    "incidence\n",
     "pd.Series(incidence).plot(labels={'index': 'day', 'value': 'incidence'})"
    ]
   },
@@ -214,8 +179,25 @@
     "Already some interesting phenomena there, \n",
     "in that the humps are the generations of cases from the first seeding infection,\n",
     "which progressively smooth into one-another with generations of cases.\n",
-    "That's it for now.\n",
-    "Next step is that I'll try to incorporate the depletion of susceptibles."
+    "\n",
+    "### Threshold behaviour\n",
+    "Next let's check that the threshold behaviour is approximately correct.\n",
+    "We would expect a declining epidemic with $R_{0} < 1$ even without\n",
+    "susceptible depletion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b94e876-43cf-4b03-9ce3-9be6ee78e7d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r0 = 0.8\n",
+    "for t in range(1, n_times):\n",
+    "    incidence[t] = (incidence[:t] * gen_time_densities[:t][::-1]).sum() * r0\n",
+    "incidence\n",
+    "pd.Series(incidence).plot(labels={'index': 'day', 'value': 'incidence'})"
    ]
   }
  ],
