Reconcile formatting of first three notebooks

--- a/semimech/01basics.ipynb
+++ b/semimech/01basics.ipynb
@@ -47,7 +47,9 @@
   {
    "cell_type": "markdown",
    "id": "057a8d10-fc2f-4851-855d-19a0f72c8013",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Parameters\n",
     "Choose some arbitrary model parameters to get started."
@@ -72,7 +74,7 @@
    "id": "e3136042-a7b8-4887-9a3e-9f87525f4e22",
    "metadata": {},
    "source": [
-    "## Generation time\n",
+    "### Generation time\n",
     "Get a distribution we can sensibly use for the generation time,\n",
     "which could represent an acute immunising respiratory infection."
    ]
