--- a/semimech/02suscept-deplete.ipynb
+++ b/semimech/02suscept-deplete.ipynb
@@ -5,7 +5,10 @@
    "id": "d316eb3c-d354-439c-ad0b-e896bb350ce8",
    "metadata": {},
    "source": [
-    "## Simpler code with basics of semi-mechanistic approach\n",
+    "## Susceptible depletion\n",
+    "Building on the previous (01basics) notebook,\n",
+    "we'll now start to think about susceptible depletion.\n",
+    "\n",
     "Again, thinking about this equation in Faria, et al:\n",
     "$\\\\i_{s,t} = (1-\\frac{n_{s,t}}{N})R_{s,t}\\sum_{\\tau<t} i_{s,\\tau}g_{t-\\tau}$\n",
     "\n",
@@ -29,17 +32,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a343bc7-c944-45a2-a089-839a5699ae66",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "073b80cd-3c77-40a1-aa83-9cd3b2fd8cf1",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
-    "    var = req_sd ** 2.0\n",
-    "    scale = var / req_mean\n",
-    "    a = req_mean / scale\n",
-    "    return {'a': a, 'scale': scale}"
+    "### Parameters\n",
+    "Set model parameters, now including the population size.\n",
+    "Also get the generation times as described previously."
    ]
   },
   {
@@ -49,43 +50,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model parameters\n",
+    "n_times = 40\n",
     "seed = 1.0\n",
     "r0 = 2.0\n",
-    "gen_time_sd = 1.5\n",
-    "gen_time_mean = 5.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe26a7ad-e2a4-43b6-9e32-2482dd84089f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generation time\n",
-    "times = 40\n",
-    "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
-    "gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))\n",
-    "pd.Series(gen_time_densities, index=range(times)).plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04a5bc8b-65f9-4375-ac92-f639be572dff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The model loop\n",
-    "incidence = np.zeros(times)\n",
-    "incidence[0] = seed\n",
     "pop = 100.0\n",
-    "suscept = pop - seed\n",
-    "for t in range(1, times):\n",
-    "    this_inc = (incidence[:t] * gen_time_densities[t-1::-1]).sum() * r0 * suscept / pop\n",
-    "    incidence[t] = this_inc\n",
-    "    suscept = max(suscept - this_inc, 0.0)"
+    "incidence = np.zeros(n_times)\n",
+    "incidence[0] = seed\n",
+    "gen_time_sd = 1.5\n",
+    "gen_time_mean = 5.0\n",
+    "\n",
+    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
+    "    var = req_sd ** 2.0\n",
+    "    scale = var / req_mean\n",
+    "    a = req_mean / scale\n",
+    "    return {'a': a, 'scale': scale}\n",
+    "\n",
+    "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
+    "gen_time_densities = np.diff(gamma.cdf(range(n_times + 1), **gamma_params))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2746bef5-d6c4-480c-b95b-ffbd64fdcd4e",
+   "metadata": {},
+   "source": [
+    "### Model run\n",
+    "Run the model with susceptible depletion,\n",
+    "decrementing the susceptible population by the incidence at each step."
    ]
   },
   {
@@ -95,26 +86,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The model loop\n",
-    "incidence = np.zeros(times)\n",
-    "incidence[0] = seed\n",
-    "pop = 100.0\n",
     "suscept = pop - seed\n",
-    "for t in range(1, times):\n",
+    "for t in range(1, n_times):\n",
     "    suscept_prop = suscept / pop\n",
-    "    infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1] * r0\n",
+    "    infect_contribution_by_day = incidence[:t] * gen_time_densities[:t][::-1] * r0\n",
     "    this_inc = infect_contribution_by_day.sum() * suscept_prop\n",
     "    incidence[t] = this_inc\n",
-    "    suscept = max(suscept - this_inc, 0.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c3bef00-e66b-4322-943c-093d17223be6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    suscept = max(suscept - this_inc, 0.0)\n",
     "pd.Series(incidence).plot(labels={'index': 'day', 'value': 'incidence'})"
    ]
   },
