--- a/semimech/03vary-r.ipynb
+++ b/semimech/03vary-r.ipynb
@@ -5,9 +5,16 @@
    "id": "d316eb3c-d354-439c-ad0b-e896bb350ce8",
    "metadata": {},
    "source": [
-    "## Simpler code with basics of semi-mechanistic approach\n",
-    "Now aiming to include both susceptible depletion and a variable reproduction number, we'll target:\n",
-    "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$"
+    "## Susceptible depletion and varying $R_{0}$\n",
+    "Building on the previous (02suscept-deplete) notebook,\n",
+    "we'll now start to think about susceptible depletion.\n",
+    "\n",
+    "As previously, the equation we're considering will be:\n",
+    "$\\\\i_t = (1-\\frac{n_t}{N})R_t\\sum_{\\tau<t} i_{\\tau}g_{t-\\tau}$\n",
+    "However, now the $R_{t}$ value is determined both\n",
+    "by the proportion of the population remaining susceptible\n",
+    "and an external \"random\" process.\n",
+    "At this stage, the process will be arbitrary values."
    ]
   },
   {
@@ -25,17 +32,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a343bc7-c944-45a2-a089-839a5699ae66",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "073b80cd-3c77-40a1-aa83-9cd3b2fd8cf1",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
-    "    var = req_sd ** 2.0\n",
-    "    scale = var / req_mean\n",
-    "    a = req_mean / scale\n",
-    "    return {'a': a, 'scale': scale}"
+    "### Parameters\n",
+    "Set model parameters, now including the population size.\n",
+    "Also get the generation times as described previously."
    ]
   },
   {
@@ -45,65 +50,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model parameters\n",
+    "n_times = 40\n",
     "seed = 1.0\n",
-    "gen_time_sd = 1.5\n",
-    "gen_time_mean = 5.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe26a7ad-e2a4-43b6-9e32-2482dd84089f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generation time\n",
-    "times = 40\n",
-    "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
-    "gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d052cd9-0332-492e-adbc-92a1207475f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Variable reproduction number\n",
-    "process_req = [2.0, 1.9, 2.2, 1.5]\n",
-    "process_times = np.linspace(0.0, times, len(process_req))\n",
-    "process_vals = np.interp(range(times), process_times, process_req)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7dbaa3b5-2310-4a3b-9d7e-acbabd3d3945",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The model loop\n",
-    "incidence = np.zeros(times)\n",
-    "incidence[0] = seed\n",
+    "r0 = 2.0\n",
     "pop = 100.0\n",
+    "incidence = np.zeros(n_times)\n",
+    "incidence[0] = seed\n",
+    "gen_time_sd = 1.5\n",
+    "gen_time_mean = 5.0\n",
+    "\n",
+    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
+    "    var = req_sd ** 2.0\n",
+    "    scale = var / req_mean\n",
+    "    a = req_mean / scale\n",
+    "    return {'a': a, 'scale': scale}\n",
+    "\n",
+    "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
+    "gen_time_densities = np.diff(gamma.cdf(range(n_times + 1), **gamma_params))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2746bef5-d6c4-480c-b95b-ffbd64fdcd4e",
+   "metadata": {},
+   "source": [
+    "### Model run\n",
+    "Run the model with susceptible depletion,\n",
+    "and a variable intrinsic reproduction number.\n",
+    "Now we can manipulate the shape of the epicurve a little more."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "686d7b9a-abdd-40fb-8703-4d03a422a13f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_req = [2.0, 1.2, 2.4, 1.8]\n",
+    "process_times = np.linspace(0.0, n_times, len(process_req))\n",
+    "process_vals = np.interp(range(n_times), process_times, process_req)\n",
     "suscept = pop - seed\n",
-    "for t in range(1, times):\n",
+    "for t in range(1, n_times):\n",
     "    suscept_prop = suscept / pop\n",
-    "    infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]\n",
+    "    infect_contribution_by_day = incidence[:t] * gen_time_densities[:t][::-1] * r0\n",
     "    this_inc = infect_contribution_by_day.sum() * suscept_prop * process_vals[t]\n",
     "    incidence[t] = this_inc\n",
-    "    suscept = max(suscept - this_inc, 0.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c3bef00-e66b-4322-943c-093d17223be6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    suscept = max(suscept - this_inc, 0.0)\n",
     "pd.Series(incidence).plot(labels={'index': 'day', 'value': 'incidence'})"
    ]
   }
