Reconcile basic optimisation notebooks into one

--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -5,9 +5,12 @@
    "id": "d316eb3c-d354-439c-ad0b-e896bb350ce8",
    "metadata": {},
    "source": [
-    "## Try out a simple optimisation routine with scipy's minimize function\n",
-    "Using the same model as in the previous notebook.\n",
-    "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$"
+    "## Try out a simple optimisation routine with scipy's `minimize` function\n",
+    "Using the same model as in the previous notebook,\n",
+    "get an arbitrarily chosen (local) optimisation algorithm running.\n",
+    "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$\n",
+    "So that we can start using these processes in more sophisticated ways,\n",
+    "I'll begin writing the code as properly encapsulated functions."
    ]
   },
   {
@@ -17,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict\n",
+    "from typing import Dict, List\n",
+    "from collections import namedtuple\n",
     "from scipy.stats import gamma\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -33,35 +37,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_func(process_req, pop, seed):\n",
+    "Outputs = namedtuple('outputs', ['incidence', 'suscept', 'r_t'])\n",
+    "\n",
+    "def semimech(gen_time_densities, process_vals, pop, seed, n_times) -> Outputs:\n",
     "    \"\"\"The semimechanistic process.\n",
     "    \"\"\"\n",
-    "    process_times = np.linspace(0.0, times, len(process_req))\n",
-    "    process_vals = np.interp(range(times), process_times, process_req)\n",
-    "    incidence = np.zeros(times)\n",
-    "    incidence[0] = seed\n",
-    "    this_suscept = pop - seed\n",
-    "    suscept = {}\n",
-    "    r_t = {}\n",
-    "    for t in range(1, times):\n",
-    "        \n",
-    "        # Update outputs\n",
-    "        infect_modifier = process_vals[t] * this_suscept / pop  # Product of pre-specified process value and proportion susceptible\n",
-    "        infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]  # Product of past incidence and their generation time densities\n",
-    "        this_inc = infect_contribution_by_day.sum() * infect_modifier  # Incidence\n",
-    "        this_suscept = max(this_suscept - this_inc, 0.0)  # Zero out any small negative values\n",
+    "    incidence = np.zeros(n_times)\n",
+    "    suscept = np.zeros(n_times)\n",
+    "    r_t = np.zeros(n_times)\n",
     "\n",
-    "        # Store quantities of interest\n",
+    "    incidence[0] = seed\n",
+    "    suscept[0] = pop - seed\n",
+    "    r_t[0] = np.nan\n",
+    "    \n",
+    "    for t in range(1, n_times):\n",
+    "        \n",
+    "        # Calculations\n",
+    "        contribution_by_day = incidence[:t] * gen_time_densities[:t][::-1]  # Product of incidence values and reversed generation times\n",
+    "        infect_modifier = process_vals[t] * suscept[t - 1] / pop  # Pre-specified process by the proportion susceptible\n",
+    "        this_inc = contribution_by_day.sum() * infect_modifier  # Incidence\n",
+    "        this_suscept = max(suscept[t - 1] - this_inc, 0.0)  # Zero out any small negative susceptible values\n",
+    "\n",
+    "        # Output tracking\n",
     "        incidence[t] = this_inc\n",
     "        suscept[t] = this_suscept\n",
     "        r_t[t] = gen_time_densities[t-1::-1].sum() * infect_modifier\n",
-    "    return incidence, suscept, r_t\n",
+    "        \n",
+    "    return Outputs(incidence, suscept, r_t)\n",
     "\n",
-    "def calib_func(process_req, pop, seed):    \n",
+    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
+    "    \"\"\"Get values for constructive the gamma distribution from user requested mean and standard deviation.\n",
+    "    \"\"\"\n",
+    "    var = req_sd ** 2.0\n",
+    "    scale = var / req_mean\n",
+    "    a = req_mean / scale\n",
+    "    return {'a': a, 'scale': scale}\n",
+    "\n",
+    "def get_gamma_densities_from_params(mean: float, sd: float) -> np.array:\n",
+    "    \"\"\"Get integrals over integer differences in gamma distribution for simulation duration.\n",
+    "    \"\"\"\n",
+    "    params = get_gamma_params_from_mean_sd(mean, sd)\n",
+    "    return np.diff(gamma.cdf(range(n_times + 1), **params))\n",
+    "\n",
+    "def get_interp_vals_over_model_time(req: List[float], n_times: int) -> np.array:\n",
+    "    \"\"\"Linear interpolation at requested values at regular intervals over simulation period.\n",
+    "    \"\"\"\n",
+    "    return np.interp(range(n_times), np.linspace(0.0, n_times, len(req)), req)\n",
+    "\n",
+    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int) -> tuple:\n",
+    "    \"\"\"The other epidemiological aspects of the model.\n",
+    "    \"\"\"\n",
+    "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd)\n",
+    "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
+    "    model_result = semimech(gen_time_densities, process_vals, pop, seed, n_times)\n",
+    "    return model_result, process_vals\n",
+    "\n",
+    "def process_calib_func(parameters: List[float], gen_time_mean, gen_time_sd, pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, parameters, pop, seed, n_times)[0][0]\n",
+    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])    \n",
+    "\n",
+    "def all_param_calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
     "    \"\"\"Get the loss function from the model.\n",
     "    \"\"\"\n",
-    "    incidence_df, _, _ = model_func(process_req, pop, seed)\n",
-    "    return sum([(incidence_df[t] - d) ** 2 for t, d in dummy_data.items()])"
+    "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
+    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])\n",
+    "\n",
+    "def plot_output_fit(targets: Dict[int, float], result: Outputs, process_vals):\n",
+    "    \"\"\"Plot results from a fitting attempt against the target data and show estimated random process.\n",
+    "    \"\"\"\n",
+    "    fitted, suscept, r_t = result\n",
+    "    model_times = pd.Series(range(n_times))\n",
+    "    fig = make_subplots(3, 1, shared_xaxes=True, vertical_spacing=0.05, subplot_titles=['incidence', 'reproduction number', 'susceptibles'])\n",
+    "    fig.add_trace(go.Scatter(x=list(targets.keys()), y=list(targets.values()), mode='markers', name='targets'), row=1, col=1)\n",
+    "    fig.add_trace(go.Scatter(x=model_times, y=fitted, name='model'), row=1, col=1)\n",
+    "    fig.add_trace(go.Scatter(x=model_times, y=process_vals, name='transmission potential'), row=2, col=1)\n",
+    "    fig.add_trace(go.Scatter(x=model_times, y=r_t, name='Rt'), row=2, col=1)\n",
+    "    fig.add_trace(go.Scatter(x=model_times, y=suscept, name='susceptibles'), row=3, col=1)\n",
+    "    return fig.update_layout(height=800, margin={'t': 20, 'b': 5, 'l': 5, 'r': 5})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3b4803a-137d-4990-a184-1019ec86879b",
+   "metadata": {},
+   "source": [
+    "### Parameters and targets\n",
+    "Set up some basic parameters and targets"
    ]
   },
   {
@@ -71,13 +133,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model parameters\n",
-    "population = 100.0\n",
+    "n_times = 40\n",
     "infectious_seed = 1.0\n",
-    "gen_time_sd = 1.5\n",
-    "gen_time_mean = 5.0\n",
-    "times = 40\n",
-    "model_times = range(times)\n",
+    "population = 100.0\n",
     "dummy_data = pd.Series(\n",
     "    {\n",
     "        5: 1.0,\n",
@@ -91,21 +149,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26d42533-c135-4c09-a22f-12b64c101fe1",
+   "metadata": {},
+   "source": [
+    "### Local optimisation with process values only"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe26a7ad-e2a4-43b6-9e32-2482dd84089f",
+   "id": "c6b9ae51-c010-4d9b-9e04-5da164127b0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generation time\n",
-    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
-    "    var = req_sd ** 2.0\n",
-    "    scale = var / req_mean\n",
-    "    a = req_mean / scale\n",
-    "    return {'a': a, 'scale': scale}\n",
-    "\n",
-    "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
-    "gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))"
+    "param_bounds = [[0.0, 10.0]] * 4\n",
+    "gen_time_mean = 5.5\n",
+    "gen_time_sd = 1.7\n",
+    "result = minimize(process_calib_func, [2.0] * 4, method='Nelder-Mead', args=(gen_time_mean, gen_time_sd, population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
+    "model_result, process_vals = model_func(gen_time_mean, gen_time_sd, result.x, population, infectious_seed, n_times)\n",
+    "optimised, suscept, r_t = model_result\n",
+    "plot_output_fit(dummy_data.to_dict(), model_result, process_vals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beca7386-b374-4be0-8913-bb07b43564da",
+   "metadata": {},
+   "source": [
+    "### Local optimisation including the generation time-related parameters"
    ]
   },
   {
@@ -115,30 +187,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optimise and run results through the model\n",
-    "result = minimize(calib_func, [1.0] * 4, method='Nelder-Mead', args=(population, infectious_seed))\n",
-    "process_times = np.linspace(0.0, times, len(result.x))\n",
-    "process_df = pd.Series(result.x, index=process_times)\n",
-    "optimised, suscept, r_t = model_func(result.x, population, infectious_seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee3e9319-4d6e-4a69-b965-e495c4910755",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot\n",
-    "optimised = pd.Series(optimised, index=model_times)\n",
-    "suscept = pd.Series(suscept, index=model_times)\n",
-    "r_t = pd.Series(r_t, index=model_times)\n",
-    "fig = make_subplots(specs=[[{'secondary_y': True}]])\n",
-    "fig.add_trace(go.Scatter(x=dummy_data.index, y=dummy_data, mode='markers', name='targets'))\n",
-    "fig.add_trace(go.Scatter(x=optimised.index, y=optimised, name='model'))\n",
-    "fig.add_trace(go.Scatter(x=process_df.index, y=process_df, name='transmission potential'))\n",
-    "fig.add_trace(go.Scatter(x=suscept.index, y=suscept, name='susceptibles'), secondary_y=True)\n",
-    "fig.add_trace(go.Scatter(x=r_t.index, y=r_t, name='Rt'))"
+    "param_bounds = [[5.0, 6.0]] + [[1.5, 2.0]] + [[0.0, 10.0]] * 4\n",
+    "result = minimize(all_param_calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
+    "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
+    "optimised, suscept, r_t = model_result\n",
+    "plot_output_fit(dummy_data.to_dict(), model_result, process_vals)"
    ]
   }
  ],
