Move optimisation to model-created values to first optimisation notebook

--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -27,7 +27,7 @@
     "import pandas as pd\n",
     "from plotly import graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
-    "from scipy.optimize import minimize"
+    "from scipy.optimize import minimize, shgo"
    ]
   },
   {
@@ -175,7 +175,9 @@
   {
    "cell_type": "markdown",
    "id": "beca7386-b374-4be0-8913-bb07b43564da",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Local optimisation including the generation time-related parameters"
    ]
@@ -192,6 +194,47 @@
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result\n",
     "plot_output_fit(dummy_data.to_dict(), model_result, process_vals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87d954d5-2437-477e-bd67-35c64981f092",
+   "metadata": {},
+   "source": [
+    "### Calibrate to outputs produced by model\n",
+    "Check that the optimisation algorithm can recover\n",
+    "the parameters used in generating some arbitrary data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df78149a-a282-4a1f-9933-c7156edc3f83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_times = pd.Series(range(n_times))\n",
+    "test_params = [5.5, 1.8, 1.8, 2.5, 1.6, 0.7]\n",
+    "test_data, _ = model_func(test_params[0], test_params[1], test_params[2:], population, infectious_seed, n_times)\n",
+    "test_vals = {t: d for t, d in zip(model_times, test_data.incidence)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0afe849e-392b-4d2c-8722-8c41c0d108ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Global optimisation with shgo - need to capture arguments through closure due to bug in optimisation function\n",
+    "# as per comment at https://stackoverflow.com/questions/72794609/scipy-issue-passing-arguments-to-optimize-shgo-function\n",
+    "param_bounds = [[0.1, 10.0]] + [[0.1, 4.0]] + [[-10.0, 10.0]] * 4\n",
+    "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: all_param_calib_func(x, p, s, t, d), param_bounds)\n",
+    "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times)\n",
+    "optimised, suscept, r_t = model_result\n",
+    "print(global_result.x[:2])\n",
+    "print(np.array(global_result.x[2:]))\n",
+    "plot_output_fit(test_vals, model_result, process_vals)"
    ]
   }
  ],
